upload files and messages

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ GITHUB_SECRET=cdd16687d9e725203282f657022ce238887e7c48
 
 GOOGLE_CLIENT_ID=950402732744-6k40ru3vn0kf7gf5n7sq5sojv90iv41k.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dvzh18qli
