--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "13.5.5",
     "next": "13.5.5",
     "next-auth": "^4.24.3",
+    "next-cloudinary": "^5.6.0",
     "next-superjson-plugin": "^0.5.9",
     "postcss": "8.4.31",
     "react": "18.2.0",
